--- a/chat_map.html
+++ b/chat_map.html
@@ -17,9 +17,8 @@
     <div id="map" style="width:100%;height:300px;"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmGF3dVLMa7VD_zf0gDbbPEs0RNBb5-WE&callback=initMap">
-        </script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+    </script>
 
     <script>
 
